welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:18: error: ';' expected but 'return' found.
    } return T(num-1) 
      ^